// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a Title control with bad layout 1`] = `
<Title
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  layout={9999}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  title="Test label text"
  visible={true}
  widget={null}
  width=""
>
  <div
    className="ui-title-bar titleBar ripple normal"
    style={Object {}}
  >
    <Label
      className="ui-title title titleDominant"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={9999}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onUpdate={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      title="Test label text"
      useedit={false}
      visible={true}
      widget={null}
      width=""
    >
      <span
        className="ui-label label normal ui-title title titleDominant"
        contentEditable={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDoubleClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        style={Object {}}
        suppressContentEditableWarning={true}
      >
        Test label text
      </span>
    </Label>
  </div>
</Title>
`;

exports[`Test creation of a Title control with bad layout 2`] = `
<Title
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  layout={9999}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  title="Test label text"
  visible={true}
  widget={null}
  width=""
>
  <div
    className="ui-title-bar titleBar ripple normal"
    style={Object {}}
  >
    <Label
      className="ui-title title titleDominant"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={9999}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onUpdate={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      title="Test label text"
      useedit={false}
      visible={true}
      widget={null}
      width=""
    >
      <span
        className="ui-label label normal ui-title title titleDominant"
        contentEditable={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDoubleClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        style={Object {}}
        suppressContentEditableWarning={true}
      >
        Test label text
      </span>
    </Label>
  </div>
</Title>
`;

exports[`Test creation of a Title control with default props 1`] = `
<div
  className="ui-title-bar titleBar ripple normal test-class"
  style={Object {}}
>
  <Label
    className="ui-title title titleDominant"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    layout={5}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onUpdate={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    text="Test label text"
    title="Test label text"
    useedit={false}
    visible={true}
    widget={null}
    width=""
  />
</div>
`;

exports[`Test creation of a Title control with even layout 1`] = `
<div
  className="ui-title-bar titleBar ripple normal"
  style={Object {}}
>
  <Label
    className="ui-title title titleEven"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    layout={1}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onUpdate={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    text="Test label text"
    title="Test label text"
    useedit={false}
    visible={true}
    widget="widget"
    width=""
  />
  <div
    className="ui-title-widget widget widgetEven normal"
  >
    widget
  </div>
</div>
`;

exports[`Test creation of a Title control with no layout 1`] = `
<div
  className="ui-title-bar titleBar ripple normal"
  style={Object {}}
>
  <Label
    className="ui-title title titleEven"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    layout={6}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onUpdate={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    text="Test label text"
    title="Test label text"
    useedit={false}
    visible={true}
    widget={null}
    width=""
  />
</div>
`;

exports[`Test creation of a Title control with quarter layout 1`] = `
<div
  className="ui-title-bar titleBar ripple normal"
  style={Object {}}
>
  <Label
    className="ui-title title titleQuarter"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    layout={0}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onUpdate={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    text="Test label text"
    title="Test label text"
    useedit={false}
    visible={true}
    widget="widget"
    width=""
  />
  <div
    className="ui-title-widget widget widgetQuarter normal"
  >
    widget
  </div>
</div>
`;

exports[`Test creation of a Title control with stacked layout 1`] = `
<div
  className="ui-title-bar titleBarStacked ripple normal"
  style={Object {}}
>
  <Label
    className="ui-title title titleStacked"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    layout={4}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onUpdate={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    text="Test label text"
    title="Test label text"
    useedit={false}
    visible={true}
    widget="widget"
    width=""
  />
  <div
    className="ui-title-widget widget widgetStacked normal"
  >
    widget
  </div>
</div>
`;

exports[`Test creation of a Title control with thirds layout 1`] = `
<div
  className="ui-title-bar titleBar ripple normal"
  style={Object {}}
>
  <Label
    className="ui-title title titleThird"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    layout={3}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onUpdate={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    text="Test label text"
    title="Test label text"
    useedit={false}
    visible={true}
    widget="widget"
    width=""
  />
  <div
    className="ui-title-widget widget widgetThird normal"
  >
    widget
  </div>
</div>
`;

exports[`Test creation of a Title control with threequarter layout 1`] = `
<div
  className="ui-title-bar titleBar ripple normal"
  style={Object {}}
>
  <Label
    className="ui-title title titleThreeQuarter"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    layout={2}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onUpdate={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    text="Test label text"
    title="Test label text"
    useedit={false}
    visible={true}
    widget="widget"
    width=""
  />
  <div
    className="ui-title-widget widget widgetThreeQuarter normal"
  >
    widget
  </div>
</div>
`;

exports[`Test disabling the Title control 1`] = `
<Title
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  id=""
  layout={5}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  title="Test label text"
  visible={true}
  widget={null}
  width=""
>
  <div
    className="ui-title-bar titleBar normal disabled nohover"
    style={Object {}}
  >
    <Label
      className="ui-title title titleDominant"
      contentEditable={false}
      direction="right"
      disabled={true}
      focus={false}
      height=""
      id=""
      layout={5}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onUpdate={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      title="Test label text"
      useedit={false}
      visible={true}
      widget={null}
      width=""
    >
      <span
        className="ui-label label normal ui-title title titleDominant disabled nohover"
        contentEditable={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDoubleClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        style={Object {}}
        suppressContentEditableWarning={true}
      >
        Test label text
      </span>
    </Label>
  </div>
</Title>
`;

exports[`Test making the Title control invisible 1`] = `
<Title
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  layout={5}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  title="Test label text"
  visible={false}
  widget={null}
  width=""
>
  <div
    className="ui-title-bar titleBar ripple normal invisible"
    style={Object {}}
  >
    <Label
      className="ui-title title titleDominant"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={5}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onUpdate={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      title="Test label text"
      useedit={false}
      visible={false}
      widget={null}
      width=""
    >
      <span
        className="ui-label label normal ui-title title titleDominant invisible"
        contentEditable={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDoubleClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        style={Object {}}
        suppressContentEditableWarning={true}
      >
        Test label text
      </span>
    </Label>
  </div>
</Title>
`;

exports[`Test retrieval of Title props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "id": "",
  "layout": 5,
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onClick": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": false,
  "visible": true,
  "widget": null,
  "width": "",
}
`;
